@@ -30,6 +30,11 @@
               "type": "minecraft:item",
               "functions": [
                 {
+                  "function": "minecraft:apply_bonus",
+                  "enchantment": "minecraft:fortune",
+                  "formula": "minecraft:ore_drops"
+                },
+                {
                   "function": "minecraft:explosion_decay"
                 }
               ],
